--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=80
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:mydb
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:mydb
+spring.datasource.hikari.username=
+spring.datasource.hikari.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=true
